# termatype

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
public/: splashscreen.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant.rs  backend.rs  commands.rs  dictionary.rs  lib.rs  plugins.rs  translator.rs
src-tauri/src/docx/: mod.rs
src/components/termatype/: AboutPage.tsx  DictionarySidebar.tsx  DocumentOutline.tsx  EwtsKeyboard.tsx  FindReplace.tsx  FormatPainter.tsx  ImageBubbleMenu.tsx  InlineDictionary.tsx  KeyboardShortcutsPage.tsx  KeyboardShortcutsPanel.tsx  LanguageToggle.tsx  MenuBar.tsx  PluginSettings.tsx  SelectionBubbleMenu.tsx  SlashCommands.tsx  StatusBar.tsx  TableBubbleMenu.tsx  TableGridPicker.tsx  TermaAssistant.tsx  TermaTranslator.tsx  ToolbarContent.tsx  VersionHistoryPanel.tsx  WyliePractice.tsx  WylieReference.tsx
src/components/termatype/tibetan-ime/: tibetan-ime-extension.ts  wylie-engine.ts  wylie-map.ts
src/components/tiptap-icons/: text-color-icon.tsx
src/extensions/: custom-image.ts  font-size.ts  indent.ts  line-height.ts  tibetan-spellcheck.ts
src/hooks/: use-focus-trap.ts
src/lib/: document.ts  print.ts  recent-files.ts  safe-invoke.ts  tauri.ts  templates.ts  tiptap-utils.ts  updater.ts  version-history.ts  word-count.ts
src/styles/: _variables.scss
src/types/: html2pdf.d.ts
(+24 files in other folders)
