[package]
name = "termatype"
version = "1.0.0"
description = "Beautiful bilingual writing. Free forever."
authors = ["TermaType Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
docx-rs = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["fs", "sync"] }
futures-util = "0.3"
llama-cpp-2 = "0.1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
sysinfo = "0.33"
